# fardels

./: README.md
client/: .env  README.md  package.json
client/public/: index.html
client/src/: About.js  App.js  Const.js  FardelViewDialog.js  Following.js  HandleSearchField.js  HandleView.js  MyFardels.js  NewFardel.js  Profile.js  UnpackedFardels.js  index.js
client/src/store/: ActionTypes.js  Actions.js  InitialState.js  Reducer.js  index.js
client/src/utils/: keplr.js
contract/: .gitignore  Cargo.toml  Makefile  NOTICE  README.md
contract/examples/: schema.rs
contract/schema/: constants.json  handle_msg.json  init_msg.json  query_msg.json
contract/src/: contract.rs  exec.rs  fardel_state.rs  lib.rs  msg.rs  query.rs  social_state.rs  state.rs  tx_state.rs  u256_math.rs  unpack_state.rs  user_state.rs  utils.rs  validation.rs
